[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sf365-bugbounty-mcp"
version = "0.1.0"
description = "MCP server exposing the Standoff 365 Bug Bounty platform to AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sf365p" }]
keywords = ["mcp", "bug-bounty", "standoff365", "security", "claude"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
sf365-bugbounty-mcp = "sf365_bugbounty_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sf365_bugbounty_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
